--- a/music.html
+++ b/music.html
@@ -8,6 +8,7 @@
 <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/audioplayer.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="js/music.js"></script>
 
 <style type="text/css">
 	
@@ -15,26 +16,35 @@
 <script>
 $(document).ready(function() {
 	$('#button1').click(function() {
-		//获取歌曲信息
+		//初始化歌曲id
 		if (document.getElementById('mid').value == "") {
 			var id="366752";//默认id
 		}else{
 			var id=document.getElementById('mid').value;
 		}
-		var murl="//music.163.com/outchain/player?type=2&id="+id+"&auto=0&height=66";
-		$('iframe').attr('src', murl);
-		$.getJSON('get.php', {mid: id}, function(json, textStatus) {
+		
+		//获取播放链接
+		var str=get("0",id);
+		var arr=str.split('|');
+		var Params=arr[0];
+		var EncSecKey=arr[1];
+		$.getJSON('getmp3.php',{params:Params,encseckey:EncSecKey},function(mjson,textStatus){
 			//debugger;
+			var mdata=$.parseJSON(mjson);
+			var mp3Url=mdata.data['0'].url;
+			$('#mp3Url').html("下载链接: "+mp3Url);
+			$('audio').attr('src', mp3Url);
+		});
+		//获取歌曲信息
+		$.getJSON('get.php', {mid: id}, function(json, textStatus) {
 			var data = $.parseJSON(json);
-			var mp3Url = data.songs["0"].mp3Url;
+			//var mp3Url = data.songs["0"].mp3Url;旧版方式,已失效
 			var mp3Name = data.songs["0"].name;
 			var mp3Art = data.songs["0"].artists["0"].name;
 			var mp3Album = data.songs["0"].album.name;
 			//前端显示歌曲信息
-			$('audio').attr('src', mp3Url);
 			$('#mp3Name').html("歌曲名: "+mp3Name);
 			$('#mp3Art').html("艺术家: "+mp3Art);
-			$('#mp3Url').html("下载链接: "+mp3Url);
 			$('#mp3Album').html("专辑名: "+mp3Album);
    });
 });
